# TeamProject

./: .env  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3ffddfceab6d_initial_table.py  607697839690_add_relationship.py  941e72e019de_add_teble.py  d0d33050166d_initial_table.py  e6d3d3577485_initial_table.py
config/: general.py
src/photos/: models.py
